@@ -1,5 +1,5 @@
 .\" filter syntax reference
-.\" $Id: filter_syntax.5,v 1.3 2002/07/21 12:36:48 matthew Exp $
+.\" $Id: filter_syntax.5,v 1.4 2002/08/20 22:54:38 matthew Exp $
 .TH "FILTER SYNTAX" 8
 
 .SH NAME
@@ -65,7 +65,7 @@ it.  Available matches are:
 .I source addr-range
 .I dest addr-range
 
-.I proto {tcp|udp|icmp}
+.I proto {tcp|udp|icmp|...}
 .I sport port-range
 .I dport port-range
 .I icmptype icmp-type
